--- a/laboratory_work_4/CMakeLists.txt
+++ b/laboratory_work_4/CMakeLists.txt
@@ -5,17 +5,25 @@ project(Lab_4)
 include_directories(include)
 
 set(SOURCES 
-    src/class_abc.cpp
+    src/cat.cpp
+    src/dog.cpp
+    src/human.cpp
+    src/animal.cpp
+    src/mammal.cpp
     src/main.cpp
     src/functions.cpp
     src/menu.cpp
 )
 
 set(HEADERS
-    include/class_abc.h
+    include/cat.h
+    include/dog.h
+    include/human.h
+    include/animal.h
+    include/mammal.h
     include/functions.h
-    include/const.h
     include/menu.h
+    include/const.h
 )
 
-add_executable(Lab_3 ${SOURCES}{HEADERS})
+add_executable(Lab_4 ${SOURCES})
