--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,16 +5,19 @@ sonar.projectKey=kozakmikhail1_cpp_lab_1
 sonar.organization=kozakmikhail1
 sonar.projectName=CPP Labs
 
-sonar.sources=src,include
+# Укажите правильные пути к исходному коду
+sonar.sources=laboratory_work_1/src,laboratory_work_1/include
 sonar.cxx.file.suffixes=.cpp,.hpp,.h,.cc,.cxx
-sonar.exclusions=**/build/**,**/cmake-build-*/**,**/test/**
+
+# Исключения
+sonar.exclusions=**/build/**,**/cmake-build-*/**,**/test/**,**/*.exe
 
 # =====================
-# IGNORE RULES CONFIG
+# FIXED IGNORE RULES CONFIG
 # =====================
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5
+sonar.issue.ignore.multicriteria=e1,e2
 
-# Ignore inconsistent parameter names
+# Правило 1: Ignore inconsistent parameter names
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/*
 sonar.issue.ignore.multicriteria.e1.ruleKey=cpp:S5025
 
