--- a/laboratory_work_3/CMakeLists.txt
+++ b/laboratory_work_3/CMakeLists.txt
@@ -5,14 +5,18 @@ project(Lab_3)
 include_directories(include)
 
 set(SOURCES
-    src/class_abc.cpp
+    src/class_a.cpp
+    src/class_b.cpp
+    src/class_c.cpp
     src/main.cpp
     src/functions.cpp
     src/menu.cpp
 )
 
 set(HEADERS 
-    include/class_abc.h
+    include/class_a.h
+    include/class_b.h
+    include/class_c.h
     include/functions.h
     include/const.h
     include/menu.h
