--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,19 +44,19 @@ jobs:
       #     cmake -S laboratory_work_4 -B laboratory_work_4/build 
       #     build-wrapper-linux-x86-64 --out-dir laboratory_work_4/build_wrapper cmake --build laboratory_work_4/build --config Release
           
-      - name: Build lab5
-        run: |
-          rm -rf laboratory_work_5/build
-          mkdir laboratory_work_5/build
-          cmake -S laboratory_work_5 -B laboratory_work_5/build 
-          build-wrapper-linux-x86-64 --out-dir laboratory_work_5/build_wrapper cmake --build laboratory_work_5/build --config Release
+      # - name: Build lab5
+      #   run: |
+      #     rm -rf laboratory_work_5/build
+      #     mkdir laboratory_work_5/build
+      #     cmake -S laboratory_work_5 -B laboratory_work_5/build 
+      #     build-wrapper-linux-x86-64 --out-dir laboratory_work_5/build_wrapper cmake --build laboratory_work_5/build --config Release
 
-      - name: Build lab6
-        run: |
-          rm -rf laboratory_work_6/build
-          mkdir laboratory_work_6/build
-          cmake -S laboratory_work_6 -B laboratory_work_6/build 
-          build-wrapper-linux-x86-64 --out-dir laboratory_work_6/build_wrapper cmake --build laboratory_work_6/build --config Release
+      # - name: Build lab6
+      #   run: |
+      #     rm -rf laboratory_work_6/build
+      #     mkdir laboratory_work_6/build
+      #     cmake -S laboratory_work_6 -B laboratory_work_6/build 
+      #     build-wrapper-linux-x86-64 --out-dir laboratory_work_6/build_wrapper cmake --build laboratory_work_6/build --config Release
 
       - name: Build lab7
         run: |
@@ -64,6 +64,14 @@ jobs:
           mkdir laboratory_work_7/build
           cmake -S laboratory_work_7 -B laboratory_work_7/build 
           build-wrapper-linux-x86-64 --out-dir laboratory_work_7/build_wrapper cmake --build laboratory_work_7/build --config Release
+
+      - name: Build lab8
+        run: |
+          rm -rf laboratory_work_8/build
+          mkdir laboratory_work_8/build
+          cmake -S laboratory_work_8 -B laboratory_work_8/build 
+          build-wrapper-linux-x86-64 --out-dir laboratory_work_8/build_wrapper cmake --build laboratory_work_8/build --config Release
+
 
       # - name: SonarCloud scan laboratory_work_1
       #   uses: SonarSource/sonarqube-scan-action@v4
@@ -116,39 +124,39 @@ jobs:
       #       -Dsonar.issue.ignore.multicriteria.e1.resourceKey=**/*
       #       -Dsonar.issue.ignore.multicriteria.e1.ruleKey=cpp:S5025
 
-      - name: SonarCloud scan laboratory_work_5
-        uses: SonarSource/sonarqube-scan-action@v4
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=kozakmikhail1_cpp_lab_5
-            -Dsonar.organization=${{ env.SONAR_ORG }}
-            -Dsonar.sources=laboratory_work_5/src,laboratory_work_5/include
-            -Dsonar.cfamily.compile-commands=laboratory_work_5/build_wrapper/compile_commands.json
-            -Dsonar.coverage.exclusions=**
-            -Dsonar.cfamily.skipCoverage=true
-            -Dsonar.exclusions=**/build/**,**/*.exe
-            -Dsonar.issue.ignore.multicriteria=e1
-            -Dsonar.issue.ignore.multicriteria.e1.resourceKey=**/*
-            -Dsonar.issue.ignore.multicriteria.e1.ruleKey=cpp:S5025
+      # - name: SonarCloud scan laboratory_work_5
+      #   uses: SonarSource/sonarqube-scan-action@v4
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   with:
+      #     args: >
+      #       -Dsonar.projectKey=kozakmikhail1_cpp_lab_5
+      #       -Dsonar.organization=${{ env.SONAR_ORG }}
+      #       -Dsonar.sources=laboratory_work_5/src,laboratory_work_5/include
+      #       -Dsonar.cfamily.compile-commands=laboratory_work_5/build_wrapper/compile_commands.json
+      #       -Dsonar.coverage.exclusions=**
+      #       -Dsonar.cfamily.skipCoverage=true
+      #       -Dsonar.exclusions=**/build/**,**/*.exe
+      #       -Dsonar.issue.ignore.multicriteria=e1
+      #       -Dsonar.issue.ignore.multicriteria.e1.resourceKey=**/*
+      #       -Dsonar.issue.ignore.multicriteria.e1.ruleKey=cpp:S5025
 
-      - name: SonarCloud scan laboratory_work_6
-        uses: SonarSource/sonarqube-scan-action@v4
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=kozakmikhail1_cpp_lab_6
-            -Dsonar.organization=${{ env.SONAR_ORG }}
-            -Dsonar.sources=laboratory_work_6/src,laboratory_work_6/include
-            -Dsonar.cfamily.compile-commands=laboratory_work_6/build_wrapper/compile_commands.json
-            -Dsonar.coverage.exclusions=**
-            -Dsonar.cfamily.skipCoverage=true
-            -Dsonar.exclusions=**/build/**,**/*.exe
-            -Dsonar.issue.ignore.multicriteria=e1
-            -Dsonar.issue.ignore.multicriteria.e1.resourceKey=**/*
-            -Dsonar.issue.ignore.multicriteria.e1.ruleKey=cpp:S5025
+      # - name: SonarCloud scan laboratory_work_6
+      #   uses: SonarSource/sonarqube-scan-action@v4
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #   with:
+      #     args: >
+      #       -Dsonar.projectKey=kozakmikhail1_cpp_lab_6
+      #       -Dsonar.organization=${{ env.SONAR_ORG }}
+      #       -Dsonar.sources=laboratory_work_6/src,laboratory_work_6/include
+      #       -Dsonar.cfamily.compile-commands=laboratory_work_6/build_wrapper/compile_commands.json
+      #       -Dsonar.coverage.exclusions=**
+      #       -Dsonar.cfamily.skipCoverage=true
+      #       -Dsonar.exclusions=**/build/**,**/*.exe
+      #       -Dsonar.issue.ignore.multicriteria=e1
+      #       -Dsonar.issue.ignore.multicriteria.e1.resourceKey=**/*
+      #       -Dsonar.issue.ignore.multicriteria.e1.ruleKey=cpp:S5025
 
       - name: SonarCloud scan laboratory_work_7
         uses: SonarSource/sonarqube-scan-action@v4
@@ -160,6 +168,23 @@ jobs:
             -Dsonar.organization=${{ env.SONAR_ORG }}
             -Dsonar.sources=laboratory_work_7/src,laboratory_work_7/include
             -Dsonar.cfamily.compile-commands=laboratory_work_7/build_wrapper/compile_commands.json
+            -Dsonar.coverage.exclusions=**
+            -Dsonar.cfamily.skipCoverage=true
+            -Dsonar.exclusions=**/build/**,**/*.exe
+            -Dsonar.issue.ignore.multicriteria=e1
+            -Dsonar.issue.ignore.multicriteria.e1.resourceKey=**/*
+            -Dsonar.issue.ignore.multicriteria.e1.ruleKey=cpp:S5025
+
+      - name: SonarCloud scan laboratory_work_8
+        uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=kozakmikhail1_cpp_lab_8
+            -Dsonar.organization=${{ env.SONAR_ORG }}
+            -Dsonar.sources=laboratory_work_8/src,laboratory_work_8/include
+            -Dsonar.cfamily.compile-commands=laboratory_work_8/build_wrapper/compile_commands.json
             -Dsonar.coverage.exclusions=**
             -Dsonar.cfamily.skipCoverage=true
             -Dsonar.exclusions=**/build/**,**/*.exe
